--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google" value="notranslate">
     <link rel="shortcut icon" href="static/favicon.ico">
-    <title>OSEP_Code Editor v:1100921</title>
+    <title>OSEP_Code Editor 1101015</title>
     
   </head>
   <body>
